# coder

./: .env.template  .gitignore  .pre-commit-config.yaml  Makefile  err.txt  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
docs/: UI.md  evidence-ledger.md  ideas.md  implementation-plan-v2.md  implementation-plan.md  nicolas_summary.md
docs/coding/: implementation-plan.md  phase-1.md
docs/research/: firecrawl-mcp-setup.md  implementation-plan.md
docs/runbooks/: general.md  research.md
src/: bootstrap.py  classes.py  cli.py  gates.py  ledger.py  models.py  nodes.py  orchestrator.py  prompt_loader.py  research_config.py  research_io.py  serde_config.py
src/helper/: authTokenLoader.py  cleanSubscriptionEnv.py  repoPaths.py
src/nodes/: __init__.py  helpers.py
src/nodes/coding/: nodes.py
src/nodes/general/: nodes.py
src/nodes/research/: nodes.py
src/prompts/: assess_complexity.j2  big_plan.j2  review.j2  spec.j2  surface_questions.j2  write_code.j2  write_tests.j2
src/prompts/research/: discover_sites.j2  frame_brief.j2  gather_updates.j2  research_agent.j2
src/tools/: get_ticket.py  pull_tickets.py
tests/: conftest.py  test_approve_plan.py  test_big_plan.py  test_bootstrap.py  test_classes.py  test_commit_merge.py  test_gate.py  test_gates.py  test_get_ticket.py  test_graph.py  test_helpers.py  test_ledger.py  test_research_config.py  test_research_io.py  test_research_nodes.py  test_select_change.py  test_serde_config.py
tickets/: ticket_1.json
tickets/open/: ticket_0001.json  ticket_0002.json
