[project]
name = "coder"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "anthropic==0.100.0",
    "anyio==4.13.0",
    "certifi==2026.4.22",
    "cfgv==3.5.0",
    "charset-normalizer==3.4.7",
    "distlib==0.4.0",
    "distro==1.9.0",
    "docstring-parser==0.18.0",
    "filelock==3.29.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "identify==2.6.19",
    "idna==3.13",
    "iniconfig==2.3.0",
    "jiter==0.14.0",
    "jsonpatch==1.33",
    "jsonpath-python==1.1.6",
    "jsonpointer==3.1.1",
    "langchain==1.2.18",
    "langchain-anthropic==1.4.3",
    "langchain-core==1.3.3",
    "langchain-openai==1.2.1",
    "langchain-openrouter==0.2.3",
    "langchain-protocol==0.0.15",
    "langgraph==1.1.10",
    "langgraph-checkpoint==4.0.3",
    "langgraph-checkpoint-sqlite==3.0.3",
    "langgraph-prebuilt==1.0.13",
    "langgraph-sdk==0.3.14",
    "langsmith==0.8.3",
    "nodeenv==1.10.0",
    "openai==2.36.0",
    "openrouter==0.9.1",
    "orjson==3.11.9",
    "ormsgpack==1.12.2",
    "packaging==26.2",
    "platformdirs==4.9.6",
    "pluggy==1.6.0",
    "pre-commit==4.6.0",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pygments==2.20.0",
    "pyright==1.1.409",
    "pytest==9.0.3",
    "python-discovery==1.3.0",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "regex==2026.5.9",
    "requests==2.33.1",
    "requests-toolbelt==1.0.0",
    "ruff==0.15.12",
    "sniffio==1.3.1",
    "tenacity==9.1.4",
    "tiktoken==0.12.0",
    "tqdm==4.67.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.7.0",
    "uuid-utils==0.14.1",
    "virtualenv==21.3.1",
    "xxhash==3.7.0",
    "zstandard==0.25.0",
]

[tool.ruff]
line-length = 100
