[project]
name = "coder"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.100",
    "jinja2>=3.1",
    "langchain>=1.2",
    "langchain-anthropic>=1.4",
    "langchain-core>=1.3",
    "langchain-openai>=1.2",
    "langchain-openrouter>=0.2",
    "langchain-protocol>=0.0.15",
    "langgraph>=1.1",
    "langgraph-checkpoint-sqlite>=3.0",
    "langgraph-prebuilt>=1.0",
    "langgraph-sdk>=0.3",
    "openai>=2.36",
    "openrouter>=0.9",
    "pydantic>=2.13",
    "python-dotenv>=1.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4",
    "pyright>=1.1",
    "pytest>=9",
    "ruff>=0.15",
]

[tool.ruff]
line-length = 100

[tool.pyright]
reportMissingTypeStubs = "none"
